--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prod": "next build && next start",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
+    "@supabase/supabase-js": "^2.44.1",
+    "date-fns": "^3.6.0",
+    "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
